<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetalleContactoActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="313dp"
        android:layout_height="38dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtTituloAgregar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/info_contact_form_personal_data"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />


    <TextView
        android:id="@+id/tvNivelEstudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:text="@string/tv_nivelestudio" />

    <RadioGroup
        android:id="@+id/rgEstudios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbPrimarioIncompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_primariaincompleto" />

        <RadioButton
            android:id="@+id/rbPrimarioCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_primariacompleto" />

        <RadioButton
            android:id="@+id/rbSecundarioInCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_secundarioincompleto" />

        <RadioButton
            android:id="@+id/rbSecundarioCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_secundariocompleto" />

        <RadioButton
            android:id="@+id/rbOtros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_otros" />
    </RadioGroup>

    <TextView
        android:id="@+id/linearIntereses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:text="@string/tv_intereses" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbDeporte"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/cbdeporte" />

        <CheckBox
            android:id="@+id/cbMusica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cbmusica" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbArte"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/cbarte" />

        <CheckBox
            android:id="@+id/cbTecnologia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cbtecnologia" />
    </TableRow>

    <TableRow
        android:id="@+id/linearRecibirInformacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tvInformacion"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_recibeinformacion" />

        <Switch
            android:id="@+id/swtichInfoSi"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/switchsi" />
    </TableRow>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/btnGuardar"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_guardar"
        android:layout_gravity="right"/>
</LinearLayout>